--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-/* https://it.labelpartners.com/pantone_coated_table.html */
-/* @@@@@@@@@@@@@@ VARIABLES @@@@@@@@@@@@@@@@@@@@ */
+/* @@@@@@@@@@@@@@  END VARIABLES @@@@@@@@@@@@@@@@@@@@ */
 /* @@@@@@@@@@@@@@ RESET @@@@@@@@@@@@@@@@@@@@ */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -22,14 +21,14 @@ time, mark, audio, video {
   font-family: 'Oxygen', sans-serif;
   /* Brad added */
   /*font: inherit;*/
-  color: #1c1314;
+  color: #52524e;
   /* Brad added */
   vertical-align: baseline; }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block; }
+  display: flex; }
 
 body {
   line-height: 1; }
@@ -67,21 +66,29 @@ body {
   height: 100%;
   min-height: 100vh;
   margin: 0 auto;
-  background-color: #DDBCB0;
-  overflow: none; }
+  background-color: #e9e9e5;
+  overflow: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center; }
+
+main {
+  min-width: 300px;
+  max-width: 768px; }
 
 .about, .login, .profile, .dashboard, .quizlist {
-  margin: 20px 10px 10px 10px; }
-
-.question, .results {
-  margin: 0px 10px 10px 10px; }
+  margin: 20px 10px 10px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 /* @@@@@@@@@@@@@@@@ ICONS @@@@@@@@@@@@@@ */
 .fa {
   background-color: transparent;
-  color: #583D3E;
+  color: #52524e;
   font-size: 24px;
-  display: inline-block;
+  display: flex;
   margin: 5px; }
 
 .homeIcon {
@@ -99,26 +106,47 @@ body {
   font-family: 'Oxygen', sans-serif;
   margin: 0 5px; }
 
+.fa-hand-o-right {
+  display: flex;
+  justify-content: flex-end;
+  text-align: right; }
+  .fa-hand-o-right .faText {
+    margin-right: 0; }
+
+.fa-hand-o-left {
+  display: flex;
+  justify-content: flex-start;
+  text-align: left; }
+  .fa-hand-o-left .faText {
+    margin-left: 0; }
+
+.fa-check {
+  color: #388e3c; }
+
 .smallIcon {
   font-size: 80%;
   margin-right: 5px; }
+
+header .fa {
+  color: #111110; }
 
 /* @@@@@@@@@@@@@@@@ HEADER @@@@@@@@@@@@@@ */
 .header {
   padding: 15px 5px;
   height: 50px;
-  background-color: #7A99AC; }
+  background-color: #9a9b94; }
 
 header {
   position: relative;
   width: 100%; }
   header h1 {
     font-size: 24px;
-    color: #4F758B;
+    color: #7e3c48;
     width: 100%; }
 
 .landing, .login, .profile {
-  text-align: center; }
+  text-align: center;
+  width: 100%; }
 
 /* @@@@@@@@@@@@@@ STATUS BAR @@@@@@@@@@@@ */
 .statusBarContainer {
@@ -127,14 +155,22 @@ header {
   width: 100%;
   margin-top: 10px;
   margin-bottom: 30px;
-  height: 20px; }
+  height: 20px;
+  -moz-box-shadow: 10px 10px 10px -8px #999;
+  -webkit-box-shadow: 10px 10px 10px -8px #999;
+  box-shadow: 10px 10px 10px -8px #999; }
 
 .statusIconContainer {
   position: relative;
   text-align: center;
-  width: 40px;
+  width: 50px;
   height: 15px;
-  display: inline-block; }
+  display: flex;
+  margin: 0 5px;
+  overflow: none;
+  -moz-box-shadow: 5px 5px 5px -4px #999;
+  -webkit-box-shadow: 5px 5px 5px -4px #999;
+  box-shadow: 5px 5px 5px -4px #999; }
 
 .statusBar {
   width: 100%;
@@ -142,125 +178,235 @@ header {
   position: absolute;
   top: 0; }
 
-.statusBarCorrect {
-  background-color: green;
-  z-index: 9;
-  right: 0; }
-
-.statusBarCompleted {
-  background-color: red;
-  z-index: 8;
-  left: 0; }
-
-.statusBarCurrentIndex {
-  background-color: yellow;
-  z-index: 7;
-  left: 0; }
-
-.statusBarCurrent {
-  background-color: black;
-  z-index: 6;
-  left: 0; }
-
-.statusBarTotal {
-  background-color: gray;
-  z-index: 5;
-  left: 0; }
-
 .statusBarCompletedContainer {
   position: absolute;
+  left: 0;
+  background-color: transparent; }
+
+.statusBarCorrect {
+  background-color: #8bc34a;
+  z-index: 9;
+  right: 0;
+  border-right: 1px solid #ccc; }
+
+.statusBarCompleted {
+  background-color: #dc4444;
+  z-index: 8;
+  left: 0;
+  border-right: 1px solid #ccc; }
+
+.statusBarCurrentIndex {
+  background-color: #f4e557;
+  z-index: 7;
+  left: 0;
+  border-right: 1px solid #ccc; }
+
+.statusBarCurrent {
+  background-color: #52524e;
+  z-index: 6;
+  left: 0;
+  border-right: 1px solid #ccc; }
+
+.statusBarTotal {
+  background-color: transparent;
+  border: 1px solid #52524e;
+  z-index: 99;
   left: 0; }
 
 /* @@@@@@@@@@@@@@ BUTTONS @@@@@@@@@@@@ */
-.loginButton, .submitButton {
+button {
+  color: #7e3c48;
+  background-color: #d4d6c8;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin: 15px; }
+
+.enterButton, .loginButton, .submitButton {
   font-size: 35px; }
+
+.submitButton {
+  margin-bottom: 0; }
 
 .aboutButton, .createAccountButton, .gotoQuizListButton,
 .checkAccuracyButton, .takeAnotherQuizButton {
   font-size: 20px; }
 
-.loginButton, .aboutButton, .createAccountButton, .gotoQuizListButton,
+.gotoQuizListButton {
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%; }
+
+.gotoQuizListButton,
 .checkAccuracyButton, .takeAnotherQuizButton, .submitButton {
-  background-color: #A6BBC8;
-  display: inline-block;
-  color: #583D3E;
-  margin: 15px; }
+  min-width: 100px;
+  max-width: 200px; }
+
+.enterButton, .aboutButton, .loginButton, .createAccountButton {
+  min-width: 200px;
+  max-width: 250px; }
 
 /* @@@@@@@@@@@@@@ LANDING @@@@@@@@@@@@ */
 .landingCover {
   padding: 50px 10px;
-  text-align: center; }
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
 
 .landingLogoTop {
   font-size: 75px;
-  color: #6a8da2; }
+  color: #6d343e; }
 
 .landingLogoMid {
   margin-top: 10px;
   font-size: 40px;
-  color: #7A99AC; }
+  color: #7e3c48; }
 
 .landingLogoBot {
   font-size: 70px;
-  color: #90aaba;
+  color: #964856;
   margin-bottom: 30px; }
 
 .landingTitle {
   font-size: 45px;
-  color: #BC8A7E;
+  color: #52524e;
   font-family: 'Archivo Black', sans-serif;
   margin: 15px 0; }
 
+.landingButtons, .loginButtons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+
+/* @@@@@@@@@@@@@@ LOGIN  @@@@@@@@@@@@ */
+.login {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%; }
+
 /* @@@@@@@@@@@@@@ QUIZ LISTS  @@@@@@@@@@@@ */
+.quizUl {
+  display: flex;
+  flex-direction: column; }
+
 .quizLi, .quizLiName, .quizLiCategory, .quizLiDifficulty {
-  display: inline-block; }
+  display: flex; }
 
 .quizLi {
-  margin: 15px 0; }
+  align-items: center; }
+
+.quizLi-Li {
+  display: flex;
+  align-items: center;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 5px; }
+  .quizLi-Li .smallIcon {
+    width: 50px; }
 
 .quizLiName {
-  width: 120px; }
+  width: 150px; }
 
 .quizLiCategory {
   width: 50px; }
 
 .quizLiDifficulty {
-  width: 30px; }
+  width: 25px;
+  height: 25px;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  -moz-box-shadow: 5px 5px 5px -4px #999;
+  -webkit-box-shadow: 5px 5px 5px -4px #999;
+  box-shadow: 5px 5px 5px -4px #999; }
 
-.dashboardQuizListHeader {
+.diff1 {
+  background-color: #faf4b7; }
+
+.diff2 {
+  background-color: #f4e557; }
+
+.diff3 {
+  background-color: #efda10; }
+
+.diff4 {
+  background-color: #f5a855; }
+
+.diff5 {
+  background-color: #e67e0e; }
+
+.dashboardQuizListHeader, .quizListHeader {
   margin: 20px 0; }
 
 .statusBox {
-  display: inline-block; }
+  display: flex; }
 
 /* @@@@@@@@@@@@@@ FORMS  @@@@@@@@@@@@ */
 .profileInput {
   font-size: 18px;
   padding: 8px;
   margin: 5px;
-  display: inline-block;
-  text-align: left; }
+  display: flex;
+  text-align: left;
+  width: 250px; }
 
 .inputLabel {
   margin-bottom: 20px;
-  margin-top: 5px;
-  display: block;
-  text-align: center;
+  margin-top: 0;
+  margin-left: 5px;
+  margin-right: 5px;
+  display: flex;
+  width: 250px;
+  color: #9f9f9a; }
+
+.question {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 90vh;
   width: 100%; }
+
+.questionAsked, .questionOptions {
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+  min-height: 30vh;
+  background-color: white;
+  border: 1px solid #ccc;
+  -moz-box-shadow: inset 5px 5px 5px -4px #999;
+  -webkit-box-shadow: inset 5px 5px 5px -4px #999;
+  box-shadow: inset 5px 5px 5px -4px #999; }
 
 .questionAsked {
-  margin-bottom: 20px;
-  border-bottom: 1px solid #CA9A8E;
-  padding-bottom: 20px;
-  width: 100%; }
+  flex: 1; }
 
 .questionOptions {
-  margin-bottom: 10px; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; }
 
 .questionForm {
-  margin-bottom: 40px;
-  border-bottom: 1px solid #CA9A8E;
-  padding-bottom: 20px; }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+
+.questionButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline; }
+  .questionButtons .smallIcon {
+    width: 65px; }
 
 /* @@@@@@@@@@@@@@ GENERAL OVERRIDES @@@@@@@@@@@@ */
 .center {
@@ -274,12 +420,12 @@ header {
 
 .code {
   font-family: 'Inconsolata', monospace;
-  color: #4F758B; }
+  color: #97124b; }
 
 .codeBox {
-  background-color: #CA9A8E; }
+  background-color: white; }
 
 .inactive {
-  color: #A37F74; }
+  color: #9a9b94; }
 
 /*# sourceMappingURL=index.css.map */
